tests/valid/type_const.py
from fhir_types import FHIR_Patient

p: FHIR_Patient = {"resourceType": "Patient"}
