tests/invalid/type_boolean.py
from fhir_types import FHIR_Patient

p: FHIR_Patient = {"deceasedBoolean": 123}
